--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile.postgres
     image: postgres
     env_file:
-      - .env.development.local
+      - .env.production.local
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
@@ -19,7 +19,7 @@ services:
       context: .
       dockerfile: Dockerfile.backend
     env_file:
-      - .env.development.local
+      - .env.production.local
     ports:
       - "5000:5000"
     depends_on:
@@ -33,7 +33,7 @@ services:
       context: .
       dockerfile: Dockerfile.frontend
     env_file:
-      - .env.development.local
+      - .env.production.local
     ports:
       - "3000:3000"
     networks:
@@ -45,33 +45,15 @@ services:
       context: .
       dockerfile: Dockerfile.admin
     env_file:
-      - .env.development.local
+      - .env.production.local
     ports:
       - "3001:3000"
     networks:
       - fbsr_net
     restart: unless-stopped
 
-  caddy:
-    image: docker.io/caddy/caddy:latest
-    env_file:
-      - .env.development.local
-    ports:
-      - "8080:80"
-      - "8443:443"
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile:Z
-      - ./backend/static:/static-files:z
-      - caddy_data:/data
-      - caddy_config:/config
-    networks:
-      - fbsr_net
-    restart: unless-stopped
-
 volumes:
   pgdata:
-  caddy_data:
-  caddy_config:
 
 networks:
   fbsr_net:
